# securefabric-public

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KEY_MANAGEMENT.md  PR_SUMMARY.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mlc_config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pull-proto.yml  pypi-release.yml  sync-proto.yml
docs/: ARCHITECTURE.md  DEBIAN_PACKAGING.md  REPO-SCOPE.md  architecture.md  quickstart.md
examples/js/: index.ts  package.json
examples/python/: requirements.txt  send_receive.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
sdk/: README.md
sdk/js/: Cargo.toml  Makefile  README.md  package.json
sdk/js/example-next/pages/: index.js
sdk/js/js/: send_client.js
sdk/js/src/: index.ts  lib.rs
sdk/python/: README.md  mypy.ini  pyproject.toml
sdk/python/examples/: tls_bearer_example.py
sdk/python/securefabric/: __init__.py  client.py  securefabric_pb2.py  securefabric_pb2_grpc.py
sdk/python/tests/: __init__.py  test_client.py  test_integration_compose.py
sdk/rust/: Cargo.toml  Makefile  build.rs
sdk/rust/src/: lib.rs
sdk/tests/: README.md  conformance_template_js.ts  conformance_template_python.py  conformance_template_rust.rs  test_vectors.json
specs/: api.md  securefabric.proto
tools/: check-packaging-metadata.py  sanitize-history.md  sync-proto.sh  verify-release-signature.sh
