# SPDX-FileCopyrightText: 2025 NodeCube d.o.o. and contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "securefabric-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
securefabric-sdk = { path = "../../sdk/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
hex = "0.4"
