[project]
name = "securefabric"
version = "0.1.0"
description = "Async Python SDK for SecureFabric node gRPC API"
authors = ["SecureFabric <>"]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
 "License :: OSI Approved :: GNU Affero General Public License v3",
 "Programming Language :: Python ::3",
 "Programming Language :: Python ::3 :: Only",
 "Operating System :: OS Independent",
]

[project.dependencies]
grpcio = ">=1.54"
protobuf = ">=4.0"
grpcio-tools = { version = ">=1.54", optional = true }

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "requests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
