[project]
name = "securefabric"
version = "0.1.0"
description = "Async Python SDK for SecureFabric node gRPC API"
authors = [
    {name = "SecureFabric", email = "contact@securefabric.io"}
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "grpcio>=1.54",
    "protobuf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "requests",
    "black",
    "mypy",
    "grpcio-tools>=1.54",
    "types-protobuf",
    "types-grpcio",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
