# SPDX-FileCopyrightText: 2025 NodeCube d.o.o. and contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "securefabric-sdk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Rust SDK for SecureFabric"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"

ed25519-dalek = "2"
blake3 = "1"
hex = "0.4"
rand = "0.8"
anyhow = "1"
thiserror = "2"
serde_json = "1"

# TLS support
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"
